--- a/voting_app/result-app-service.yaml
+++ b/voting_app/result-app-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
+  name: result-service
   labels:
-    name: redis-service
+    name: result-service
     app: demo-voting-app
 spec:
   ports:
-    - port: 6379
-      targetPort: 6379
+    - port: 80
+      targetPort: 80
   selector:
-    name: redis-pod
+    name: result-app-pod
     app: demo-voting-app
