--- a/voting_app/postgres-pod.yaml
+++ b/voting_app/postgres-pod.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
     - name: postgres
-      image: postgrese
+      image: postgres
       ports:
         - containerPort: 5432
       env:                       # Using Secret or any Vault is a better and safer approach than this
