--- a/voting_app/redis-deploy.yaml
+++ b/voting_app/redis-deploy.yaml
@@ -2,10 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-deploy
+  labels:
+    name: redis-deploy
+    app: demo-voting-app
 spec:
   selector:
     matchLabels:
-      name: redis-deploy
+      name: redis-pod
       app: demo-voting-app
   template:
     replicas: 1
